# PrivatePump

./: .env.example  .gitattributes  .gitignore  .vercelignore  Anchor.toml  Cargo.toml  DEPLOYMENT_GUIDE.md  MAGICBLOCK_PROPOSAL.md  MAGICPUMP_UNIQUE_FEATURES.md  QUICK_DEPLOY.md  README.md  VERIFICATION_REPORT.md  deploy-vercel.sh  devnet-launch.js  devnet-launch.ts  launch-private.js  launch-token.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
programs/magic-pump/: Cargo.toml
programs/magic-pump/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs
programs/magic-pump/src/instructions/: buy.rs  commit_curve.rs  consume_vrf.rs  create_token.rs  delegate_curve.rs  er_buy.rs  er_sell.rs  fair_launch_buy.rs  fair_launch_create.rs  fair_launch_reveal.rs  graduate.rs  initialize.rs  mod.rs  request_vrf.rs  sell.rs  update_config.rs  withdraw_fees.rs
programs/magic-pump/src/state/: bonding_curve.rs  fair_launch.rs  global.rs  mod.rs  vrf_state.rs
scripts/: deploy.sh  generate-idl.sh  init-global.ts  seed-tokens.ts  test-buy-token.ts  test-create-token.ts  test-er-flow.ts  test-graduation.ts  test-sell-token.ts  update-threshold.ts
server/: package.json  tsconfig.json
server/src/: index.ts
tests/: bonding-curve-math.spec.ts  magic-pump.spec.ts  package.json  tsconfig.json
