[package]
name = "magic-pump"
version = "0.1.0"
description = "MagicPump - Token launchpad with MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_pump"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token", "metadata"] }
ephemeral-rollups-sdk = { version = "0.8", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.2", features = ["anchor"] }
# Pin to avoid edition2024 incompatibility with Solana platform-tools cargo 1.84
blake3 = "=1.6.1"
constant_time_eq = "=0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
